# tiril

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.adoc  README.md  build.bat  config.bat  my_build.bat  my_config.bat  my_config_profile.bat
doc/: readme
siril/: CMakeLists.txt  README.md  package.yaml  siril.cabal  stack.yaml
siril/_test/: Main.hs  bkEn.txt  bkNo.txt  bkSb.txt
siril/app/: BootstrapMenu.hs  BuildSmartbook.hs  ExportMemrise.hs  ExportMemriseUI.hs  Main.hs  SmartbookUI.hs  View.hs  ViewUI.hs  Windows.hs
siril/js/: alloy.jsx  alloy.jsx.js  book.css  book.js  common.js  export.css  export.js  view.css  view.js
siril/src/: Db.hs  Dictionary.hs  GoogleTranslate.hs  Lexin.hs  Session.hs  Type.hs
siril/src/SmartBook/: Alloy.hs  AlloyParser.hs  Crypto.hs  Sb.hs  Type.hs
tiril/: ChangeLog.md  README.md  package.yaml  stack.yaml
tiril/_bench/: Main.hs
tiril/_test/: Main.hs
tiril/app/: BootstrapMenu.hs  Main.hs  Menu.hs  Windows.hs  schema.mwb  schema.mwb.bak  schema.sql
tiril/benchmark/: Main.hs
tiril/js/: app.css  app.js
tiril/sql/: Create.bat  Delete.bat  Drop.bat  RunSqlScript.hs  delete.sql  drop.sql
tiril/src/: Db.hs  GoogleTranslate.hs  Lexin.hs  Session.hs  Type.hs
tiril/static/: app.css
tiril/static/css/: app.css
tiril/static/ico/: credit.me
tiril/static/js/: app.js
viril/: CMakeLists.txt  README.md  _build.bat  _sln.bat  buffer_subrip.h  dirent.h  iterator_traversers.h  iterators.h  main.cpp  poll.cpp  tiril.cpp  tiril.h  underscore_subrip.h  viril.lua  vlc_helper.cpp  vlc_helper.h
viril/depends/: readme.txt
viril/depends/vlc-3.0.0/sdk/lib/: libvlc.la  libvlccore.la
